archive/flux/network/network/gateway/resources/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: 192.168.7.5
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
